--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "asteroid-destroyer",
+  "name": "asteroid-destroyer-front",
   "main": "expo-router/entry",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "scripts": {
     "start": "expo start",
-    "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
